[package]
name = "test_time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "*", features = ["derive"]}
time = { version = "0.3.35", features = ["serde", "serde-well-known", "std","parsing","formatting"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"], optional = true }
serde_json = "1.0.115"
